[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ae_path_compare"
version = "0.1.0"
description = "Path comparison utilities using distribution-based confidence"
authors = [{ name = "Arturs Elksnis" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "transformers"
]

[tool.setuptools.packages.find]
where = ["src"]
